# icarus_models

./: .gitlab-ci.yml  Cargo.toml  README.md  go.mod  user.go
.gitea/workflows/: tag_release.yaml  workflow.yaml
models/: accesslevel.go  loginresult.go  user.go
src/: access_level.rs  album.rs  constants.rs  coverart.rs  lib.rs  login_result.rs  song.rs  token.rs  types.rs  user.rs
src/util/: mod.rs
tests/: album.json  tests.rs  track01.flac  track02.flac  track03.flac
