[package]
name = "icarus_models"
version = "0.2.0"
edition = "2024"
description = "models used for the icarus project"
license = "MIT"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139" }
rand = { version = "0.9" }
tempfile = { version = "3.19.1" }
