[package]
name = "icarus_models"
version = "0.4.0"
edition = "2024"
rust-version = "1.86"
description = "models used for the icarus project"
license = "MIT"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139" }
rand = { version = "0.9" }
time = { version = "0.3.41", features = ["formatting", "macros", "parsing", "serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
[dev-dependencies]
tempfile = { version = "3.19.1" }
